added silence is golden index.php

--- a/.gitignore
+++ b/.gitignore
@@ -336,12 +336,18 @@ ASALocalRun/
 !themes/
 !uploads/
 !README.md
+!index.php
+
 # Ignore everything in "plugins" except certain plugins. #
 plugins/*
 !plugins/custom-posts-widget/
 !plugins/akismet/
+!plugins/index.php
+!plugins/hello.php
+
 # Ignore everything in "themes" except the active theme. #
 themes/*
+!themes/index.php
 !themes/daria-day/
 
 # Ignore OS files #
