--- a/.gitignore
+++ b/.gitignore
@@ -353,6 +353,7 @@ plugins/*
 themes/*
 !themes/index.php
 !themes/daria-day/
+themes/daria-day/build/
 
 # Ignore OS files #
 # =============== #
@@ -385,6 +386,7 @@ node_modules/
 yarn.lock
 themes/daria-day/package-lock.json
 themes/daria-day/gulpfile.js
+
 
 
 # Ignore Dploy configs #
